簡単なボタンを通常のCSSで記述

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.easy-button {
+  padding: 8px 16px;
+  background-color: #467ef7;
+  color: white;
+  border-radius: 4px;
+  font: bold;
+  margin-left: 40px;
+}
+
+.easy-button:hover {
+  background-color: #386ad6;
+}
