--- a/src/input.css
+++ b/src/input.css
@@ -14,3 +14,15 @@
 .easy-button:hover {
   background-color: #386ad6;
 }
+
+.btn {
+  @apply font-bold py-2 px-4 rounded ml-10;
+}
+
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+
+.btn-blue:hover {
+  @apply bg-blue-600;
+}
